# tsvkit

./: Cargo.toml  LICENSE  README.md
examples/: abundance.tsv  bioinfo_example.xlsx  cytokines.tsv  expression.tsv  metadata.tsv  profiles.tsv  qc.tsv  samples.tsv  scores.tsv  subjects.tsv
src/: aggregate.rs  common.rs  cut.rs  expression.rs  filter.rs  info.rs  join.rs  main.rs  melt.rs  mutate.rs  pivot.rs  pretty.rs  slice.rs  sort.rs  summarize.rs
src/csv/: mod.rs
src/excel/: mod.rs
