[package]
name = "tsvkit"
version = "0.9.4"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
indexmap = "2"
itertools = "0.14.0"
regex = "1"
flate2 = "1"
xz2 = "0.1"
rayon = "1"
num_cpus = "1"
calamine = { version = "0.31.0", default-features = false, features = ["chrono"] }
rust_xlsxwriter = "0.90.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
